fixed radio button alignment issues in section 1 table. Added string/integer type select dropdown

--- a/absoluteRisk/css/app.css
+++ b/absoluteRisk/css/app.css
@@ -41,6 +41,11 @@ a {
     display: block;
 }
 
-.form-group {
-    margin-top: 10px;
+.rt-sm-gutter > [class*='col-'] {
+    padding-right:5px;
+    padding-left:0;
+}
+
+.form-group.top-margin {
+    margin-top: 7px;
 }
